Fix word wrapping in long event names on Special:AllEvents
Bug: T353382

--- a/resources/ext.campaignEvents.specialeventslist.styles/EventsListPager.less
+++ b/resources/ext.campaignEvents.specialeventslist.styles/EventsListPager.less
@@ -39,4 +39,5 @@
 
 .ext-campaignevents-events-list-pager-link {
 	font-size: 1.1em;
+	overflow-wrap: anywhere;
 }
